add string module